--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,14 @@ SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
 NEXTAUTH_SECRET=your_nextauth_secret_here
 NEXTAUTH_URL=http://localhost:3000
 
+# PostgreSQL Database
+# For local development: postgresql://username:password@localhost:5432/metricify
+# For production: Use your cloud provider's connection string
+DATABASE_URL=postgresql://metricify_user:your_secure_password@localhost:5432/metricify
+
+# EDMTrain API
+# Apply for API key at: https://edmtrain.com/api-documentation
+EDMTRAIN_API_KEY=your_edmtrain_api_key_here
+
 # Environment
 NODE_ENV=development
