--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:init": "tsx scripts/init-db.ts",
+    "db:migrate": "tsx scripts/migrate-sqlite-to-postgres.ts",
+    "festivals:sync": "tsx scripts/sync-festivals.ts",
+    "interests:calculate": "tsx scripts/calculate-interests.ts",
+    "cache:clear": "tsx scripts/clear-cache.ts"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.4.2",
@@ -15,9 +20,13 @@
     "@emotion/styled": "^11.13.5",
     "better-sqlite3": "^11.0.0",
     "chart.js": "^4.4.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
+    "fuse.js": "^7.1.0",
+    "natural": "^8.1.0",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -26,11 +35,14 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
+    "@types/natural": "^5.1.5",
     "@types/node": "^22",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
