added further documentation and dev postgres containerization...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,52 @@
 services:
+  # PostgreSQL Database
+  postgres:
+    image: postgres:15-alpine
+    container_name: metricify-postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: metricify_user
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-metricify_secure_password_2024}
+      POSTGRES_DB: metricify
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./scripts/init-postgres.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U metricify_user -d metricify"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - metricify-network
+
+  # Next.js Application
   metricify:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: metricify-app
+    restart: unless-stopped
     ports:
       - "3000:3000"
     env_file:
       - .env.local
+    environment:
+      - DATABASE_URL=postgresql://metricify_user:${POSTGRES_PASSWORD:-metricify_secure_password_2024}@postgres:5432/metricify
+      - NODE_ENV=production
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - metricify-network
+    volumes:
+      - ./data:/app/data  # For any local file storage if needed
+
+volumes:
+  postgres_data:
+    driver: local
+
+networks:
+  metricify-network:
+    driver: bridge
